examples/ok/cpa_matrix_dlin_long.zc
../all/cpa_matrix_dlin_long.zc