examples/fail/cpa_matrix_dlin.zc
../all/cpa_matrix_dlin.zc